<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailMovieActivity"
    tools:ignore="ContentDescription" >


    <ImageView
        android:id="@+id/detailIMGBackdrop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/svg_logo_the_movie_db_square" />

    <TextView
        android:id="@+id/detailTVRating"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_white_circle"
        android:backgroundTint="@color/secondaryLightColor"
        android:fontFamily="@font/abeezee"
        android:foreground="@drawable/fg_second_dark_circle_stroke"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/item_rating"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/detailIMGPoster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:padding="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/svg_logo_the_movie_db_square" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detailIMGPoster"
        app:layout_constraintTop_toBottomOf="@+id/detailIMGBackdrop">

        <TextView
            android:id="@+id/detailTVTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:text="@string/item_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detailTVDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/item_release_date" />

        <TextView
            android:id="@+id/detailTVGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:text="@string/item_genre"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/detailTVOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abeezee"
                android:padding="8dp"
                android:text="@string/item_overview" />

            <TextView
                android:id="@+id/detailTVLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:fontFamily="@font/abeezee"
                android:linksClickable="true"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/item_link"
                android:textSize="12sp"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/detailFABBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_bookmark_border_24"
        app:tint="@color/white" />

    <ProgressBar
        android:id="@+id/detailProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>